outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval2241944156089730150_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. future distances, incorporating a heuristic to favor nodes that balance proximity and potential future utility, while penalizing revisits with a non-linear penalty to discourage cycles.}
                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. future distances, incorporating a heuristic to favor nodes that balance proximity and potential future utility, while penalizing revisits with a non-linear penalty to discourage cycles.}
                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
